fix:video file missing error

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="./src/assets/images/dhurva-logo.png"
+      sizes="512x512"
+      href="https://res.cloudinary.com/dzpkbej9y/image/upload/v1739979272/DhruvaStar_h7lamv.png"
+
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kce Dhruva</title>
+    <title>Dhruva</title>
   </head>
   <body>
     <div id="root"></div>
