--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <title>Dhuruva 2025 - National Tech, Sports & Cultural Fest | Karpagam College of Engineering</title>
 
-<img src="dhuruva-event.jpg" alt="Dhuruva 2025 - National Level Tech, Sports & Cultural Fest at Karpagam College of Engineering">
+<!-- <img src="dhuruva-event.jpg" alt="Dhuruva 2025 - National Level Tech, Sports & Cultural Fest at Karpagam College of Engineering"> -->
     <link
       rel="icon"
       type="image/svg+xml"
