--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Register now for Dhuruva 2025, the ultimate 3-day national-level fest at Karpagam College of Engineering! Experience thrilling sports, cutting-edge tech events, and vibrant cultural performances. Secure your spot today!">
+    <meta
+      name="description"
+      content="Register now for Dhuruva 2025, the ultimate 3-day national-level fest at Karpagam College of Engineering! Experience thrilling sports, cutting-edge tech events, and vibrant cultural performances. Secure your spot today!"
+    />
+    <title>𝗞𝗖𝗘 | 𝗗𝗵𝗿𝘂𝘃𝗮</title>
+    <title>
+      Dhuruva 2025 - National Tech, Sports & Cultural Fest | Karpagam College of
+      Engineering
+    </title>
 
-<title>Dhuruva 2025 - National Tech, Sports & Cultural Fest | Karpagam College of Engineering</title>
-
-<!-- <img src="dhuruva-event.jpg" alt="Dhuruva 2025 - National Level Tech, Sports & Cultural Fest at Karpagam College of Engineering"> -->
+    <!-- <img src="dhuruva-event.jpg" alt="Dhuruva 2025 - National Level Tech, Sports & Cultural Fest at Karpagam College of Engineering"> -->
     <link
       rel="icon"
       type="image/svg+xml"
@@ -14,7 +20,6 @@
       href="https://res.cloudinary.com/dzpkbej9y/image/upload/v1739979272/DhruvaStar_h7lamv.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>𝗞𝗖𝗘 | 𝗗𝗵𝗿𝘂𝘃𝗮</title>
   </head>
   <body>
     <div id="root"></div>
