Department Event Pic Changed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
       name="description"
       content="Register now for Dhuruva 2025, the ultimate 3-day national-level fest at Karpagam College of Engineering! Experience thrilling sports, cutting-edge tech events, and vibrant cultural performances. Secure your spot today!"
     />
-    <title>𝗞𝗖𝗘 | 𝗗𝗵𝗿𝘂𝘃𝗮</title>
+    <!--meta-->
+    <meta name="description" content="Dhruva 2025">
+    <title>Dhruva</title>
     <title>
       Dhuruva 2025 - National Tech, Sports & Cultural Fest | Karpagam College of
       Engineering
