Fixed : All reg btn nav Announcement Soon page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     content="Register now for Dhuruva 2025, the ultimate 3-day national-level fest at Karpagam College of Engineering! Experience thrilling sports, cutting-edge tech events, and vibrant cultural performances. Secure your spot today!" />
   <!--meta-->
   <meta name="description" content="Dhruva 2025">
-  <title>Dhruva</title>
+  <title>Dhruva 2025</title>
   <title>
     Dhuruva 2025 - National Tech, Sports & Cultural Fest | Karpagam College of
     Engineering
