--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
       name="description"
       content="Register now for Dhuruva 2025, the ultimate 3-day national-level fest at Karpagam College of Engineering! Experience thrilling sports, cutting-edge tech events, and vibrant cultural performances. Secure your spot today!"
     />
-    <!--meta-->
-    <meta name="description" content="Dhruva 2025">
+    <meta name="description" content="Dhruva 2025" />
     <title>Dhruva</title>
     <title>
       Dhuruva 2025 - National Tech, Sports & Cultural Fest | Karpagam College of
@@ -25,6 +24,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
     <script type="text/javascript">
       var Tawk_API = Tawk_API || {},
         Tawk_LoadStart = new Date();
