--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="description"
     content="Register now for Dhuruva 2025, the ultimate 3-day national-level fest at Karpagam College of Engineering! Experience thrilling sports, cutting-edge tech events, and vibrant cultural performances. Secure your spot today!" />
-  <!--meta-->
+  
   <meta name="description" content="Dhruva 2025">
   <title>Dhruva 2025</title>
   <title>
-    Dhuruva 2025 - National Tech, Sports & Cultural Fest | Karpagam College of
+     National Tech, Sports & Cultural Fest | Karpagam College of
     Engineering
   </title>
   <link
